<resources>
    <string name="app_name">Countries</string>
    <string name="eurasia_description">is the largest continental area on Earth, comprising all of Europe and Asia.</string>
    <string name="eurasia">Eurasia</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="west">West</string>
    <string name="middle">Middle</string>
    <string name="east">East</string>
    <string name="andorra">Andorra</string>
    <string name="andorra_description">officially the Principality of Andorra, is a sovereign landlocked microstate on the Iberian Peninsula, in the eastern Pyrenees, bordered by France to the north and Spain to the south. Believed to have been created by Charlemagne, Andorra was ruled by the count of Urgell until 988, when it was transferred to the Roman Catholic Diocese of Urgell. The present principality was formed by a charter in 1278. It is headed by two co-princes: the Bishop of Urgell in Catalonia, Spain and the President of France. Its capital and also its largest city is Andorra la Vella.</string>
    <string name="portugal">Portugal</string>
    <string name="portugal_description">officially the Portuguese Republic (Portuguese: República Portuguesa, is a country whose mainland is located on the Iberian Peninsula, in Southwestern Europe, and whose territory also includes the Atlantic archipelagos of the Azores and Madeira. It features the westernmost point in mainland Europe and its Iberian portion is bordered to the west and south by the Atlantic Ocean and to the north and east by Spain, the sole country to have a land border with Portugal. Its two archipelagos form two autonomous regions with their own regional governments.</string>
    <string name="spain">Spain</string>
    <string name="spain_description">With an area of 505,990 km2 (195,360 sq mi), Spain is the largest country in Southern Europe, the second-largest country in Western Europe and the European Union, and the fourth-largest country by area on the European continent. With a population exceeding 47.4 million, Spain is the sixth-most populous country in Europe, and the fourth-most populous country in the European Union. Spain\'s capital and largest city is Madrid; other major urban areas include Barcelona, Valencia, Seville, Zaragoza, Málaga, Murcia, Palma de Mallorca, Las Palmas de Gran Canaria and Bilbao.</string>
    <string name="poland">Poland</string>
    <string name="poland_description"> officially the Republic of Poland, is a country located in Central Europe. It is divided into 16 administrative provinces, covering an area of 312,696 km2 (120,733 sq mi), and has a largely temperate seasonal climate. Poland has a population of nearly 38.5 million people, and is the fifth-most populous member state of the European Union. Warsaw is the nation\'s capital and largest metropolis. Other major cities include Kraków, Łódź, Wrocław, Poznań, Gdańsk, and Szczecin.</string>
    <string name="slovakia">Slovakia</string>
    <string name="slovakia_description">officially the Slovak Republic (Slovak: Slovenská republika [ˈslɔʋenskaː ˈrepublika] (About this soundlisten)), is a landlocked country in Central Europe. It is bordered by Poland to the north, Ukraine to the east, Hungary to the south, Austria to the southwest, and the Czech Republic to the northwest. Slovakia\'s mostly mountainous territory spans about 49,000 square kilometres (19,000 sq mi), with a population of over 5.4 million. The capital and largest city is Bratislava, while the second largest city is Košice.</string>
    <string name="slovenia">Slovenia</string>
    <string name="slovenia_description">Slovenia has historically been the crossroads of Slavic, Germanic, and Romance languages and cultures. The territory of modern-day Slovenia has been part of many different states; the Roman Empire, the Byzantine Empire, the Carolingian Empire, the Holy Roman Empire, the Kingdom of Hungary, the Republic of Venice, the Illyrian Provinces of Napoleon\'s First French Empire, the Austrian Empire and Austria-Hungary Empire. In October 1918, the Slovenes co-founded the State of Slovenes, Croats and Serbs.</string>
    <string name="latvia">Latvia</string>
    <string name="latvia_description">officially known as the Republic of Latvia (Latvian: Latvijas Republika, Latgalian: Latvejas Republika, Livonian: Leţmō Vabāmō), is a country in the Baltic region of Northern Europe, bordered by Estonia to the north, Lithuania to the south, Russia to the east, Belarus to the southeast, and sharing a maritime border with Sweden to the west. Latvia covers an area of 64,589 km2 (24,938 sq mi), with a population of 1.9 million. The country has a temperate seasonal climate.[16] Its capital and largest city is Riga. Latvians belong to the ethno-linguistic group of the Balts;</string>
    <string name="estonia">Estonia</string>
    <string name="estonia_description">The land of what is now modern Estonia has been inhabited since at least 9,000 BC. Ancient Estonians were one of the last "pagan" civilisations in Europe to adopt Christianity following the Livonian Crusade in the 13th century.[15] After centuries of successive rule by the Teutonic Order, Denmark, Poland, Sweden, and the Russian Empire, a distinct Estonian national identity began to emerge by the end of the 19th century. This culminated in the 1918 Estonian Declaration of Independence from Russia and German Empire and, after the end of World War I.</string>
    <string name="ukraine">Ukraine</string>
    <string name="ukraine_description">is a country in Eastern Europe. It is the second-largest country in Europe after Russia, which it borders to the east and north-east. Ukraine also shares borders with Belarus to the north; Poland, Slovakia, and Hungary to the west; Romania and Moldova to the south; and has a coastline along the Sea of Azov and the Black Sea. It spans an area of 603,628 km2 (233,062 sq mi), with a population of 41.3 million, and is the eighth-most populous country in Europe. The nation\'s capital and largest city is Kyiv.</string>
    <string name="turkey">Turkey</string>
    <string name="turkey_description"> officially the Republic of Turkey,[a] is a transcontinental country located mainly on the peninsula of Anatolia in Western Asia, with a smaller portion on East Thrace in Southeast Europe. It shares borders with Greece and Bulgaria to the northwest; the Black Sea to the north; Georgia to the northeast; Armenia, Azerbaijan, and Iran to the east; Iraq to the southeast; Syria and the Mediterranean Sea to the south; and the Aegean Sea to the west.</string>
    <string name="georgia">Georgia</string>
    <string name="georgia_description"> is a country located at the intersection of Eastern Europe and Western Asia. It is a part of the Caucasus region, bounded to the west by the Black Sea, to the north and east by Russia, to the south by Turkey and Armenia, and to the southeast by Azerbaijan. It covers 69,700 square kilometres (26,911 sq mi), and has a population of around 4 million.[11] Georgia is a representative democracy governed as a unitary parliamentary republic.[11] Tbilisi is the capital and largest city, home to roughly a quarter of the population.</string>
    <string name="qatar">Qatar</string>
    <string name="qatar_description">officially the State of Qatar, is a country located in Western Asia, occupying the small Qatar Peninsula on the northeastern coast of the Arabian Peninsula.[15][16][17][18][19] Its sole land border is with neighbouring Gulf Cooperation Council monarchy Saudi Arabia to the south, with the rest of its territory surrounded by the Persian Gulf. The Gulf of Bahrain, an inlet of the Persian Gulf, separates Qatar from nearby Bahrain. The capital is Doha.</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="kazakhstan_description">officially the Republic of Kazakhstan is a country in Central Asia. It borders Russia in the north, China in the east, and Kyrgyzstan, Uzbekistan, and Turkmenistan in the south. The capital is Nur Sultan, formerly known as Astana. It was moved from Almaty, the country\'s largest city, in 1997. Kazakhstan is the world\'s largest landlocked country, and the ninth-largest in the world. It has a population of 18.8 million, and one of the lowest population densities in the world, at fewer than 6 people per square kilometre (15 people per sq mi).</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="kyrgyzstan_description">is a mountainous landlocked country in Central Asia. Kyrgyzstan is bordered by Kazakhstan to the north, Uzbekistan to the west, Tajikistan to the south, and China to the east. Its capital and largest city is Bishkek. Ethnic Kyrgyz make up the majority of the country\'s six million people, followed by significant minorities of Uzbeks and Russians. The Kyrgyz language is closely related to other Turkic languages, although Russian remains spoken and is a co official language. Ninety percent of Kyrgyzstan\'s population are Muslim, with the majority of its population following Sunni Islam.</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="tajikistan_description">officially the Republic of Tajikistan is a landlocked country in Central Asia. It has an area of 143,100 km2 (55,300 sq mi)[6][7][8] and an estimated population of 9,537,645 people.[15] Its capital and largest city is Dushanbe. It is bordered by Afghanistan to the south, Uzbekistan to the west, Kyrgyzstan to the north and China to the east. The traditional homelands of the Tajik people include present-day Tajikistan as well as parts of Afghanistan and Uzbekistan.</string>
    <string name="japan">Japan</string>
    <string name="japan_description"> is an island country in East Asia, located in the northwest Pacific Ocean. It is bordered on the west by the Sea of Japan, and extends from the Sea of Okhotsk in the north toward the East China Sea and Taiwan in the south. Part of the Ring of Fire, Japan spans an archipelago of 6852 islands covering 377,975 square kilometers (145,937 sq mi); the five main islands are Hokkaido, Honshu, Shikoku, Kyushu, and Okinawa. Tokyo is Japan\'s capital and largest city; other major cities include Yokohama, Osaka, Nagoya, Sapporo, Fukuoka, Kobe, and Kyoto.</string>
    <string name="south_korea">South Korea</string>
    <string name="s_korea_description">The Korean Peninsula was inhabited as early as the Lower Paleolithic period. Its first kingdom was noted in Chinese records in the early 7th century BCE. Following the unification of the Three Kingdoms of Korea into Silla and Balhae in the late 7th century, Korea was ruled by the Goryeo dynasty (918–1392) and the Joseon dynasty (1392–1897). The succeeding Korean Empire was annexed in 1910 into the Empire of Japan. Japanese rule in Korea ended following the former\'s surrender in World War II, after which Korea was divided into two zones;</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hong_kong_description"> officially the Hong Kong Special Administrative Region of the People\'s Republic of China (HKSAR),[d] is a city and special administrative region of China on the eastern Pearl River Delta in South China. With over 7.5 million residents of various nationalities[e] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world. Hong Kong is also one of the most developed cities in the world, with the most expensive housing.</string>
    <string name="country_flag">country flag</string>
    <string name="select_area">Select area</string>
</resources>