<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="9dp"
        android:text="@string/select_area"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/r_g"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left" />

    <RadioGroup
        android:id="@+id/r_g"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="18dp">

        <RadioButton
            android:id="@+id/btn_europe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/europe"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/btn_asia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asia"
            android:checked="true"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/eurasia"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/ic_country"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/r_g" />


    <ImageView
        android:id="@+id/ic_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/country_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_eurasia" />

    <TextView
        android:id="@+id/country_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eurasia_description"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/ic_country" />

</androidx.constraintlayout.widget.ConstraintLayout>